# rtype-epitech

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  windowCompile.bat
client/: SpriteStruct.hpp  config.hpp  game.cpp  main.cpp  menu.cpp  network.cpp
client/ressources/: coordinate_sprite.txt
doc/: Client.md  Install.md  Server.md
server/: CMakeLists.txt  Mutex.cpp  Mutex.hpp  Utilities.cpp  config.hpp  levels.cpp  sendOperation.cpp  server.cpp
server/Components/: InitialPositionComponent.hpp  LifeComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  ProjectileVectorComponent.hpp  SpriteComponent.hpp
server/Core/: ComponentManager.hpp  Coordinator.hpp  Types.hpp
server/Game/Enemy/: CreateEnemy.cpp  Enemy.hpp
server/Game/Player/: CreatePlayer.cpp  Player.hpp
server/Game/Projectile/: CreateProjectile.cpp  Projectile.hpp
server/Maths/: Vec2.hpp  Vec3.hpp
server/Systems/: CollisionSystem.cpp  CollisionSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ProjectileSystem.cpp  ProjectileSystem.hpp
shared/: Config.hpp
